VDC Test Programs
- Add kbdtest, cvdtest, and cvdonly test programs.  They apply to MBC platform only.
- Display more boot info in CVDU and KBD drivers.
- Separate floppy and hard disk content definition files.

--- a/Source/Images/Makefile
+++ b/Source/Images/Makefile
@@ -3,7 +3,8 @@
 #
 SYSTEMS = ../CPM22/cpm_wbw.sys ../ZSDOS/zsys_wbw.sys ../CPM3/cpmldr.sys ../ZPM3/zpmldr.sys
 
-FDIMGS = fd144_cpm22.img fd144_zsdos.img fd144_ws4.img
+FDIMGS = fd144_cpm22.img fd144_zsdos.img fd144_nzcom.img \
+	fd144_cpm3.img fd144_zpm3.img fd144_ws4.img
 HD512IMGS = hd512_cpm22.img hd512_zsdos.img hd512_nzcom.img \
 	hd512_cpm3.img hd512_zpm3.img hd512_ws4.img
 # HDIMGS += hd512_bp.img
@@ -42,7 +43,7 @@ hd1024_combo.img: $(HD1024PREFIX) $(HD1024IMGS)
 # at build time, a few variables are set (sys, fmt, type, size, d) based on the
 # target to build.  first, we build an empty image using the a tr, dd pipeline.
 # we then scan the d_{d}/u* directories, copying in files to user numbers
-# then process the d_{d}.txt file, copying in those files, and finally maybe put
+# then process the ?d_{d}.txt file, copying in those files, and finally maybe put
 # an OS at the start of each image
 #
 
@@ -75,13 +76,13 @@ blankhd1024:
 		(*zpm3*) sys=../ZPM3/zpmldr.sys;; \
 	esac ; \
 	if echo $@ | grep -q ^fd144_ ; then \
-		fmt=wbw_fd144 ; type=fd144_ ; proto=blank144 ; \
+		fmt=wbw_fd144 ; dtype=fd ; type=fd144_ ; proto=blank144 ; \
 	fi ; \
 	if echo $@ | grep -q ^hd512_ ; then \
-		fmt=wbw_hd512 ; type=hd512_ ; proto=blankhd512 ; \
+		fmt=wbw_hd512 ; dtype=hd ; type=hd512_ ; proto=blankhd512 ; \
 	fi ; \
 	if echo $@ | grep -q ^hd1024_ ; then \
-		fmt=wbw_hd1024 ; type=hd1024_ ; proto=blankhd1024 ; \
+		fmt=wbw_hd1024 ; dtype=hd ; type=hd1024_ ; proto=blankhd1024 ; \
 	fi ; \
 	d=$$(echo $(basename $@) | sed s/$$type//) ; \
 	echo Generating $@ ; \
@@ -101,9 +102,10 @@ blankhd1024:
 			done ; \
 		fi ; \
 	done ; \
-	if [ -f d_$$d.txt ] ; then \
-		echo " " copying files from d_$$d.txt ; \
-		grep -v ^# d_$$d.txt | tr -d '\r' | while read file user ; do \
+	echo $${dtype}_$$d.txt ; \
+	if [ -f $${dtype}_$$d.txt ] ; then \
+		echo " " copying files from $${dtype}_$$d.txt ; \
+		grep -v ^# $${dtype}_$$d.txt | tr -d '\r' | while read file user ; do \
 			rf=$$($(CASEFN) $$file | sort -V) ; \
 			echo "    " $$rf ; \
 			if [ -z "$$rf" ] ; then \
