Minor ASSIGN Fixes, Add 2PIOTST
- Improved ASSIGN operation under CP/M 3 to better handle BIOS function invocations
- Added 2PIOTST for testing the DUALPIO MBC board
- Increased default RAM drive size for ZRC

--- a/Tools/Makefile.inc
+++ b/Tools/Makefile.inc
@@ -112,6 +112,9 @@ CPM=$(TOOLS)/cpm/bin80/
 %.rel: %.mac
 	$(ZXCC) $(CPM)/M80 -=$(basename $<)
 
+%.com: %.rel
+	$(ZXCC) $(CPM)/L80 -$(basename $<),$(basename $<).com/n/e
+
 ifeq ($(UNAME), Linux)
 %.eeprom: %.spin
 	$(BSTC) -e -l $<
