--- a/Source/Apps/Test/Makefile
+++ b/Source/Apps/Test/Makefile
@@ -1,5 +1,5 @@
 OBJECTS = 
-SUBDIRS = DMAmon I2C inttest ppidetst ramtest tstdskng rzsz vdctest kbdtest ps2info
+SUBDIRS = DMAmon I2C inttest ppidetst ramtest tstdskng rzsz vdctest kbdtest ps2info 2piotst
 DEST = ../../../Binary/Apps/Test
 TOOLS =../../../Tools
 
