RomDsk Makefile Compatibility Improvement
Laszlo reported that the Unix make system was failing on openSuse Linux.  Turns out that it did not like the syntax in one line of the Makefile in the RomDsk directory.  This small change eliminates the incompatibility.

--- a/Source/RomDsk/Makefile
+++ b/Source/RomDsk/Makefile
@@ -23,8 +23,8 @@ rom512_%.dat rom1024_%.dat: ROMAPPS=$(ROMAPPS1) $(ROMAPPS2)
 rom%_wbw.dat: BIOS=wbw
 rom%_una.dat: BIOS=una
 
-rom128%.dat:
-	>$@
+rom128_%.dat:
+	touch $@
 
 %.dat:
 	### Making ROM Disk $@
