--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: rlespinasse/github-slug-action@latest
+      - uses: rlespinasse/github-slug-action@v4.4.0
         
       - uses: actions/checkout@v3.1.0
 
