--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -53,7 +53,7 @@ jobs:
             RomWBW-SnapShot-Package.zip
 
   buildMacOS:
-    runs-on: macos-latest
+    runs-on: macOS-12
 
     steps:
       - uses: actions/checkout@v3.1.0
