--- a/Tools/simh/Sim.cfg
+++ b/Tools/simh/Sim.cfg
@@ -24,6 +24,7 @@ attach n8vem0 %1
 ; hard disks
 ;set hdsk debug=read;write;verbose
 attach hdsk0 ..\..\Binary\hd512_combo.img
+;attach hdsk0 ..\..\Binary\psys.img
 attach hdsk1 ..\..\Binary\hd1024_combo.img
 set hdsk0 format=HDSK
 set hdsk1 format=HDSK
