--- a/Source/pSys/Makefile
+++ b/Source/pSys/Makefile
@@ -8,7 +8,7 @@ include $(TOOLS)/Makefile.inc
 trk0.bin: loader.bin bios.bin boot.dat fill.bin
 	cat $+ >$@
 
-psys.img: ../Images/hd1024_prefix.dat trk0.bin psys.vol trk0.bin blank.vol
+psys.img: ../Images/hd1k_prefix.dat trk0.bin psys.vol trk0.bin blank.vol
 	cat $+  >$@
 
 testldr.bin: loader.asm
@@ -18,5 +18,5 @@ testfill.bin: fill.asm
 	$(TASM) -dTESTBIOS $< $@ testfill.lst
 
 
-psystest.img: ../Images/hd1024_prefix.dat testldr.bin bios.bin biostest.dat testfill.bin
+psystest.img: ../Images/hd1k_prefix.dat testldr.bin bios.bin biostest.dat testfill.bin
 	cat $+ >$@
