Fixed SURVEY Crash on SBC Platform
Hacked to avoid bank switch problem.  See issue #316

--- a/Source/Apps/Makefile
+++ b/Source/Apps/Makefile
@@ -1,13 +1,9 @@
-OBJECTS = sysgen.com survey.com \
-	syscopy.com assign.com format.com talk.com mode.com rtc.com \
-	timer.com rtchb.com
-SUBDIRS = XM FDU FAT Tune Test ZMP ZMD Dev VGM cpuspd
+OBJECTS = sysgen.com syscopy.com assign.com format.com talk.com \
+	mode.com rtc.com timer.com rtchb.com
+SUBDIRS = XM FDU FAT Tune Test ZMP ZMD Dev VGM cpuspd Survey
 DEST = ../../Binary/Apps
 TOOLS =../../Tools
 
 include $(TOOLS)/Makefile.inc
 
 USETASM = 1
-
-survey.com: USETASM = 0
-
