--- a/Source/Makefile
+++ b/Source/Makefile
@@ -15,7 +15,7 @@ SUBDIRS += RomDsk
 SUBDIRS += HBIOS
 SUBDIRS += Images
 SUBDIRS += ZRC
-SUBDIRS += ZZR
+SUBDIRS += ZZRC
 #SUBDIRS += Doc
 TOOLS = ../Tools
 include $(TOOLS)/Makefile.inc
