--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3.3.0
-      
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+
       - name: Create Package Label
         run: |
           echo GITHUB_REF: "$GITHUB_REF"
