--- a/Source/Makefile
+++ b/Source/Makefile
@@ -8,7 +8,7 @@ SUBDIRS += CBIOS
 SUBDIRS += Forth
 SUBDIRS += TastyBasic
 SUBDIRS += Fonts
-SUBDIRS += CPM22 ZCPR ZCPR-DJ ZSDOS CPM3 ZPM3
+SUBDIRS += CPM22 ZCPR ZCPR-DJ ZSDOS CPM3 ZPM3 QPM
 #SUBDIRS += BPBIOS
 SUBDIRS += pSys
 SUBDIRS += RomDsk
