--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ Source/CPM3/options.lib
 Source/CPM3/zpmbios3.spr
 Source/HBIOS/Blank512KB.dat
 Source/HBIOS/build.inc
-Source/HBIOS/*_ddw.*
+Source/HBIOS/Config/*_ddw.*
 Source/Images/blank144
 Source/Images/blankhd
 Source/Prop/Spin/ParPortProp.list
